--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             a:hover { color: #333; text-decoration: none; }
         </style>
     </head>
-    <body style="background-image: url('drivers2day-banner.jpg');background-size: cover;">
+    <body style="background-image: url('drivers2day-banner.jpg');background-size: cover;background-repeat: no-repeat;">
         <img src="drivers2day-logo.png"/>
         <div id="article">
             <h1>Our site is getting a little tune up and some love.</h1>
